objects/LAT_SWOTAnalysis__c.object
<CustomObject>
    <fields>
        <fullName>Description_Opportunities__c</fullName>
        <inlineHelpText>Recursos favoráveis externos</inlineHelpText>
        <label>Oportunidades</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_Strengths__c</fullName>
        <inlineHelpText>Recursos favoráveis internos</inlineHelpText>
        <label>Forças Competitivas</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_Threats__c</fullName>
        <inlineHelpText>Barreiras atuais externas e riscos potenciais</inlineHelpText>
        <label>Ameaças</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_weaknesses__c</fullName>
        <inlineHelpText>Barreiras atuais internas</inlineHelpText>
        <label>Fraquezas Competitivas</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SalesAcademy__c</fullName>
        <label>Academia de Vendas</label>
        <referenceTo>LAT_SalesAcademy__c</referenceTo>
        <relationshipLabel>Análise SWOT</relationshipLabel>
        <relationshipName>Analise_SWOT</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Análise SWOT</label>
    <nameField>
        <displayFormat>ASW-{000}</displayFormat>
        <label>Análise SWOT</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Análise SWOT</pluralLabel>
    <recordTypes>
        <fullName>LAT_Distribuicao</fullName>
        <active>true</active>
        <label>Distribuição</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_Modern_Trade</fullName>
        <active>true</active>
        <label>Modern Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_On_Trade</fullName>
        <active>true</active>
        <label>On Trade\Eventos</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>